src/objects/DRE__DRE_Formula__mdt.object
<CustomObject>
    <fields>
        <fullName>DRE__Apex_Class_Name__c</fullName>
        <inlineHelpText>Apex class name responsible for handling this formula (must extend DREInterface.IFormulaHandler)</inlineHelpText>
        <label>Apex Class Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Description__c</fullName>
        <inlineHelpText>Formula description, to appear in DRE formula editor</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Operand_Size__c</fullName>
        <label>Operand Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                    <default>true</default>
                    <label>One</label>
                </value>
                <value>
                    <fullName>One or more</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Two or more</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
                <value>
                    <fullName>Three or more</fullName>
                </value>
                <value>
                    <fullName>Four</fullName>
                </value>
                <value>
                    <fullName>Four or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRE__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Logic</fullName>
                </value>
                <value>
                    <fullName>Math</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>SOQL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DRE Formula</label>
    <listViews>
        <fullName>DRE__All</fullName>
        <columns>DRE__Type__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>DRE__Operand_Size__c</columns>
        <columns>DRE__Apex_Class_Name__c</columns>
        <columns>DRE__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>DRE Formulas</pluralLabel>
</CustomObject>